--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+clap = {version = "2.33", features = ["yaml"]}
 futures = "0.3"
